--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-	This is a code created by Aditya wadhwani for LGM
+	This is a code created by Aditya wadhwani 
 -->
 <!DOCTYPE html>
 <html lang="en">
